spelling, setflash removal, rls fix for not visible listing, clickable avatar name bars,

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -89,10 +89,6 @@
   @apply font-medium text-accent hover:underline
 }
 
-.avatar-container {
-  @apply flex gap-x-2 items-center
-}
-
 .generic-card {
   @apply bg-card p-8 rounded-lg shadow-md
 }
@@ -100,22 +96,3 @@
 .text-gradient {
   @apply bg-clip-text text-transparent bg-gradient-to-r from-primary to-accent
 }
-
-/* a {
-  @apply cursor-pointer;
-}
-
-.authBtn {
-  @apply btn;
-}
-button[disabled].authBtn {
-  font-size: 0.001px;
-  filter: brightness(65%);
-}
-button[disabled].authBtn::before {
-  font-size: 14px;
-  content: "Loading...";
-  color: oklch(var(--pc));
-}  */
-
-/* Hack to temporarily solve https://github.com/supabase/auth-ui/issues/219 */
